<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/index"
        android:textSize="@dimen/text_size_23" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="@dimen/text_size_23" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/epc"
        android:textSize="@dimen/text_size_23" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/tid"
        android:textSize="@dimen/text_size_23" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/totalCount"
        android:textSize="@dimen/text_size_23" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/rssi"
        android:textSize="@dimen/text_size_23" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:background="@drawable/layer"
        android:gravity="center"
        android:text="@string/temp"
        android:textSize="@dimen/text_size_23" />
</LinearLayout>