<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <View
        android:layout_width="1.5dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/way"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/single"
                    android:textSize="@dimen/text_size_18" />

                <RadioButton
                    android:id="@+id/loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/loop"
                    android:textSize="@dimen/text_size_18" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop_10"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/c"
                    android:textSize="@dimen/text_size_18" />

                <RadioButton
                    android:id="@+id/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:textSize="@dimen/text_size_18" />

                <RadioButton
                    android:id="@+id/gb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gb"
                    android:textSize="@dimen/text_size_18" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tag_Count"
                        android:textSize="@dimen/text_size_18" />

                    <TextView
                        android:id="@+id/tagCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DodgerBlue"
                        android:textSize="@dimen/text_size_18" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textSize="@dimen/text_size_18" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/DodgerBlue"
                        android:textSize="@dimen/text_size_18" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalCount"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/readCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DodgerBlue"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="@dimen/text_size_18" />

                    <!--                <TextView-->
                    <!--                    android:id="@+id/timeCount"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:text="00:00:00(s)"-->
                    <!--                    android:textSize="@dimen/text_size_18" />-->
                    <TextView
                        android:id="@+id/timeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0(ms)"
                        android:textSize="@dimen/text_size_18" />

                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>