<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/system_wallpaper"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/sp_11" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@drawable/background_border_top_and_bottom">

        <TextView
            android:id="@+id/tv_set_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/select_system_wallpaper"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_reset_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_28"
        android:background="@drawable/background_border_bottom"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:text="@string/reset_system_wallpaper"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12" />

</LinearLayout>